--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+<p id="welcome">Welcome to <%= title %></p>
+<p><a id="login-link" href="/login">Login</a></p>
 </body>
 </html>
