Update to work with changes in Glados

--- a/views/user-details.ejs
+++ b/views/user-details.ejs
@@ -10,6 +10,6 @@
 cookie: <%= cookie %>
 request.user: <%= requestUser %>
 </pre>
-<p><a href="/glados/login">Glados Login</a></p>
+<p><a href="/login">Glados Login</a></p>
 </body>
 </html>
